--- a/bookmarks/bookmarks.html
+++ b/bookmarks/bookmarks.html
@@ -265,6 +265,7 @@
 <dt><a href="https://nodejs.org/en/docs/">Documentation | Node.js</a>
 </dl><p>
 <dt><a href="https://www.digitalocean.com/community/tutorials/how-to-use-cron-to-automate-tasks-ubuntu-1804">ubuntu cron job</a>
+<dt><a href="https://github.com/tmux-plugins/tmux-resurrect/blob/master/docs/restoring_previously_saved_environment.md">tmux | manually restore previous session </a>
 </dl><p>
 </dl><p>
 <dt><a href="http://www.photography-forum.org/index.php">Photography Forum</a>
